# document-converter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .uvrc  CHANGELOG.md  Dockerfile  Dockerfile.windows  LICENSE  Makefile  README.md  docker-compose.yml  env.example  html2md.py  nginx.conf  pyproject.toml  run.py  setup.bat  setup.sh  test.md  test_reload.py  test_retry_mechanism.py
app/: __init__.py  config.py  main.py  models.py  watermark.py
app/api/: dependencies.py  routes.py
app/core/: __init__.py  document_converter.py  html_processor.py  logger.py  pandoc_converter.py
data/docx/: test.docx
data/html/test/: main.html
data/md/test/: main.md
scripts/: README.md  add_watermark.py  convert_docx_to_pdf.py
